Flight Search Service implemented